Fix banner and menu colors
I don't know why I used buttontext; that is invisible on some devices.

--- a/main.css
+++ b/main.css
@@ -174,6 +174,7 @@
 
   button {
     cursor: pointer;
+    color: white;
   }
 
   .subline {
@@ -430,7 +431,6 @@
     }
 
     & a {
-      color: buttontext;
       text-decoration-line: none;
     }
   }
@@ -461,6 +461,7 @@
     inset-inline: auto 0;
     inset-block: 0;
     border: none;
+    border-end-start-radius: 5px;
     opacity: 0;
     transform: translate(20ch);
     transition:
@@ -479,7 +480,7 @@
     }
 
     & a {
-      color: buttontext;
+      color: white;
       text-decoration-line: none;
     }
   }
